fixing pagination button spacing

--- a/src/assets/scss/partials/_galleryItem.scss
+++ b/src/assets/scss/partials/_galleryItem.scss
@@ -125,8 +125,8 @@
 
 	svg {
 		position: relative;
-		padding-top: 1px;
-		top: 3px;
-		margin: 0 4px;
+		top: 2px;
+		margin: -2px 2px 0 2px;
+		height: 14px;
 	}
 }
